--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_RSVP">RSVP</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -392,7 +392,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">⚪︎</td>
+              <td class="p-1"><a href="html/terms.html#h_WPA2">WPA2</a></td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_OP25B">OP25B</a></td>
               <td class="p-1">⚪︎</td>
