令和3年 午後2 問1の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -478,6 +478,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_DNSフォワーダ">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#DNSフォワーダ"
+              aria-expanded="false"
+              aria-controls="DNSフォワーダ"
+            >
+              DNSフォワーダ
+            </button>
+          </h2>
+          <div id="DNSフォワーダ" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              自身ではDNSの名前解決を行わず、別のフルサービスリゾルバに名前解決要求を中継するDNSサーバのこと。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_DNSラウンドロビン">
           <h2 class="accordion-header">
             <button
@@ -2754,6 +2773,26 @@
           <div id="量子ゲート方式" class="accordion-collapse collapse">
             <div class="accordion-body">
               極低温の環境の中で量子ゲートを用いて演算を行う量子コンピュータのこと。
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item" id="h_リンクアグリゲーション">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#リンクアグリゲーション"
+              aria-expanded="false"
+              aria-controls="リンクアグリゲーション"
+            >
+              リンクアグリゲーション
+            </button>
+          </h2>
+          <div id="リンクアグリゲーション" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              複数の物理リンクを束ねて1つの論理リンクとして扱う技術。通信時に複数の物理リンクを同時に使用できることから
+              ネットワーク帯域の拡大、冗長性の向上、負荷分散による効率の向上が期待できる。
             </div>
           </div>
         </div>
