令和3年 午後2 問2の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -193,9 +193,10 @@
               NOTIFICATION：<br />
               エラーを検出した場合に送信される<br />
               KEEPALIVE：<br />
-              BGP接続の確立やBGP接続の維持のために交換する<br />
+              BGP接続の確立やBGP接続の維持のために交換する<br /><br />
               ルーティング方法には手動で経路を設定する静的経路制御(スタティックルーティング)と動的にルーティングプロトコルを用いて経路を設定する動的経路制御(ダイナミックルーティング)が
-              ある。同じ宛先ネットワークに対して複数のルーティング設定が存在する場合は静的経路制御が優先される。
+              ある。同じ宛先ネットワークに対して複数のルーティング設定が存在する場合は静的経路制御が優先される。<br />
+              隣接するASから受信する経路情報に自身のAS番号が含まれている場合は、経路のループを回避するためその経路を受け取らないように破棄する。
             </div>
           </div>
         </div>
