令和元年 午後1 問3の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -437,6 +437,25 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_DHCPスヌーピング">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#DHCPスヌーピング"
+              aria-expanded="false"
+              aria-controls="DHCPスヌーピング"
+            >
+              DHCPスヌーピング
+            </button>
+          </h2>
+          <div id="DHCPスヌーピング" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              サーバとクライアントの間でやり取りされるDHCPメッセージを監視し、動的にIPパケットをフィルタリングする機能。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_DMARC">
           <h2 class="accordion-header">
             <button
