令和元年 午後2 問1の内容を用語に反映

--- a/html/terms.html
+++ b/html/terms.html
@@ -1779,6 +1779,26 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item" id="h_SIP">
+          <h2 class="accordion-header">
+            <button
+              class="accordion-button collapsed bg-warning"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#SIP"
+              aria-expanded="false"
+              aria-controls="SIP"
+            >
+              SIP(Session Initiation Protocol)
+            </button>
+          </h2>
+          <div id="SIP" class="accordion-collapse collapse">
+            <div class="accordion-body">
+              IPネットワークを利用した通話の相手と「呼制御」と呼ばれる機能でつながるためのプロトコル。呼制御とは電話の受発信を管理する機能のことで、インターネットを介した
+              音声通話における発信、終話、保留、再開などの処理が実現される。
+            </div>
+          </div>
+        </div>
         <div class="accordion-item" id="h_SNMP">
           <h2 class="accordion-header">
             <button
