平成26年2回目の結果を記録

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">×</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -375,7 +375,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1"><a href="html/terms.html#h_DNSSEC">DNSSEC</a></td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
@@ -487,11 +487,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1"><a href="html/terms.html#h_RAID">RAID</a></td>
-              <td class="p-1">
-                <a href="html/terms.html#h_メモリインタリープ"
-                  >メモリ<br />インタリープ</a
-                >
-              </td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">
                 <a href="html/terms.html#h_パイプライン処理"
                   >パイプライン<br />処理</a
@@ -531,7 +527,7 @@
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
-              <td class="p-1">×</td>
+              <td class="p-1">⚪︎</td>
               <td class="p-1">⚪︎</td>
               <td class="p-1">×</td>
               <td class="p-1">⚪︎</td>
@@ -567,7 +563,7 @@
               <td class="p-1 text-success">92%</td>
               <td class="p-1 text-success">88%</td>
               <td class="p-1 text-success">84%</td>
-              <td class="p-1 text-success">84%</td>
+              <td class="p-1 text-success">100%</td>
               <td class="p-1">64%</td>
               <td class="p-1 text-success">84%</td>
               <td class="p-1 text-success">80%</td>
